fixxed side scrolling on small devices for real now

--- a/med-website/src/app/picture-switch/picture-switch.component.scss
+++ b/med-website/src/app/picture-switch/picture-switch.component.scss
@@ -68,6 +68,7 @@ mat-card-content {
     color: white;
     margin-top: 4rem;
     width: 25rem;
+    max-width: 90%;
 }
 
 .image {
