--- a/med-website/src/app/split-pic/split-pic.component.scss
+++ b/med-website/src/app/split-pic/split-pic.component.scss
@@ -31,7 +31,7 @@
         font-style: normal;
         font-weight: 400;
         font-style: normal;
-        margin-top: 0;
+        margin: 0 .5rem 0 .5rem;
         
     }
     
@@ -73,7 +73,7 @@
         }
       }
 
-    @media screen and (max-width: 490px) {
+    @media screen and (max-width: 520px) {
         .div-blue {
             height: 35rem;
         }
@@ -83,7 +83,7 @@
         }
 
         .welcome-text {
-            font-size: 4vw;
+            font-size: 3.5vw;
 
         }
     }
