--- a/med-website/src/app/toolbar/toolbar.component.scss
+++ b/med-website/src/app/toolbar/toolbar.component.scss
@@ -58,6 +58,11 @@ mat-toolbar a {
 
     
 }
+
+.logo {
+  width: 300px;
+  height: 92px;
+}
 .header-text {
   text-align: center;
   justify-content: center;
@@ -136,4 +141,8 @@ button {
     button:hover {
       background-color: #2865c8;
     }
-    
+
+    .logo {
+      width: 225px;
+      height: 69px;
+    }
